- refine background thread for providers - add cli (find and pull) - add esgi defaults to config - deprecate restrict_witness_group
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/dataproxy/config-defaults.yaml
+++ b/dataproxy/config-defaults.yaml
@@ -1,6 +1,10 @@
 # --------- general settings, normally no need to adjust ------------- 
 dump_folder: dump
 
+wsgi:
+    port: 8010
+    host: localhost
+
 logs:
     file: "dataproxy.log"
     folder: logs
